# zhipukit

./: README.md  index.html  package-lock.json  package.json  tray-popup.html  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
src/: App.vue  TrayPopup.vue  style.css  tray-popup-main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  claude.rs  lib.rs  tray.rs  types.rs  utils.rs
src/components/: BalanceQuery.vue  ClaudeConfig.vue  SettingsView.vue  TokenCalculator.vue
